umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_bzr_q1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 28
sum_formula: C19ClN5
graph6: XhCKGC@@GA?@?@?@C???@??C??G??G?@D??????G???o??@???C
