umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_canon_reorder2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 29
sum_formula: C20N8+4
graph6: "[?CaO??@?`C?O??G??K???????_A????_?@@?@GC????G@???_A?C?_??@????G@"
