umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_github112_tgt.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 30
sum_formula: C12H10ClN5
graph6: "[s_GGC@?O?_`?@A?_?G?O??C??O??G??C??A???G??@???@???A????_??_O???@"
